# url-shortener

backend/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: db.rs  main.rs  secrets.rs
backend/src/controllers/: mod.rs  url.rs
backend/src/models/: mod.rs  url.rs
backend/src/services/: mod.rs  url.rs
frontend/: index.html
