[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.12"
native-tls = "0.2.14"
once_cell = "1.21.3"
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
base64 = "0.22.1"
postgres-native-tls = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = "0.12.24"